--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -15,9 +15,12 @@ body {
     background-color: var(--color-black);
     color: var(--color-white);
     font-family: var(--font-family);
+    position: relative;
 }
 
-
+.home {
+    position: relative;
+}
 .h1 {
     font-size: var(--space-m-2xl);
     text-transform: uppercase;
@@ -57,3 +60,50 @@ body {
   .border-rad {
     border-radius: 1.5rem;
   }
+
+  .wave-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    z-index: -1;
+}
+
+.wave-top svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 36px;
+}
+
+.wave-top .shape-fill {
+    fill: #FFFFFF;
+}
+
+  .wave-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    z-index: -1;
+}
+
+.wave-bottom svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 100px;
+    transform: rotateY(180deg);
+}
+
+.wave-bottom .shape-fill {
+    fill: #FFFFFF;
+}
+
+
